Add minlength of text in task text

--- a/src/static/pages/main.ejs
+++ b/src/static/pages/main.ejs
@@ -11,7 +11,7 @@
             <form action="/" method="POST" id="task_form" enctype="multipart/form-data">
                 <div class="task-item task-text-input task-form-item">
                     <label for="task">Task:</label><br>
-                    <textarea type="text" id="task" name="task" maxlength="255" class="enter-field"></textarea>
+                    <textarea type="text" id="task" name="task" required maxlength="255" class="enter-field"></textarea>
                 </div>
 
                 <div class="task-item task-form-item">
